add functions to get positions before scale applied

--- a/tests/_pages/with-arrow-transformed-parent.html
+++ b/tests/_pages/with-arrow-transformed-parent.html
@@ -1,22 +1,23 @@
 <div id="container">
     <div id="transform">
         <div id="reference"></div>
-        <div id="popper"></div>
-        <div id="arrow"></div>
     </div>
+    <div id="popper"></div>
+    <div id="arrow"></div>
 </div>
 
 <style>
     @import '_reset.css';
 
     #container {
+        transform: scale(0.8) translate(100px, 100px);
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
     #transform {
-        transform: translate(10px, 10px);
+        transform: scale(2) translate(-150px, 150px);
         display: flex;
         align-items: center;
         justify-content: center;
